--- a/Stacking.ipynb
+++ b/Stacking.ipynb
@@ -84,7 +84,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# class Ensemble(object):\n",
+    "#     #base_models=[model1, model2, model3,...]\n",
+    "#     def __init__(self, n_folds, stacker, base_models, is_TimeSeries=False):\n",
+    "#         self.n_folds = n_folds\n",
+    "#         self.stacker = stacker\n",
+    "#         self.base_models = base_models\n",
+    "#         self.S_train=[]\n",
+    "#         self.S_test=[]\n",
+    "#         self.isTS=is_TimeSeries\n",
+    "#         #self_folds=[]\n",
+    "        \n",
+    "#     def fit(self, X_train, y_train):\n",
+    "#         X_train=np.array(X_train)\n",
+    "#         y_train=np.array(y_train)\n",
+    "#         if not self.isTS:\n",
+    "#             kf=KFold(n_splits=self.n_folds, shuffle=True, random_state=17)\n",
+    "#         else:\n",
+    "#             kf=TimeSeriesSplit(n_splits=self.n_folds)\n",
+    "#         self.S_train = np.zeros((X_train.shape[0], len(self.base_models)))\n",
+    "#         for i, clfModel in enumerate(self.base_models):\n",
+    "#             clf=[clfModel() for tmp in np.arange(self.n_folds)]\n",
+    "#             for j, (train_idx, test_idx) in enumerate(kf.split(np.arange(len(X_train)))):\n",
+    "#                 X_CVtrain = X_train[train_idx]\n",
+    "#                 y_CVtrain = y_train[train_idx]\n",
+    "#                 X_CVholdout = X_train[test_idx]\n",
+    "#                 # y_CVholdout = y_train[test_idx]\n",
+    "#                 clf[j].fit(X_CVtrain, y_CVtrain)\n",
+    "#                 y_pred = clf[j].predict(X_CVholdout)[:]\n",
+    "#                 self.S_train[test_idx, i] = y_pred\n",
+    "#         self.stacker.fit(self.S_train, y_train)\n",
+    "        \n",
+    "#     def predict(self, X_test):    \n",
+    "#         X_test=np.array(X_test)\n",
+    "#         self.S_test = np.zeros((X_test.shape[0], len(self.base_models)))\n",
+    "#         for i, clf in enumerate(self.base_models):\n",
+    "#             S_test_i = np.zeros((X_test.shape[0], self.n_folds))\n",
+    "#             for j in range(self.n_folds):\n",
+    "#                 S_test_i[:, j] = clf[j].predict(X_test)[:]\n",
+    "#             self.S_test[:, i] = S_test_i.mean(1)\n",
+    "#         y_pred = self.stacker.predict(self.S_test)[:]\n",
+    "#         return y_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -185,11 +236,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true,
     "deletable": true,
     "editable": true
+   },
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'ABCMeta' object does not support indexing",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-e0b1269e3e82>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m                      is_TimeSeries=False)#,\\\n\u001b[1;32m      5\u001b[0m \u001b[0mensembleObj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mpred\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mensembleObj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mX_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0mr2_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-7-fa42fcc0cfc2>\u001b[0m in \u001b[0;36mpredict\u001b[0;34m(self, X_test)\u001b[0m\n\u001b[1;32m     36\u001b[0m             \u001b[0mS_test_i\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mn_folds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     37\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mn_folds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 38\u001b[0;31m                 \u001b[0mS_test_i\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mclf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     39\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mS_test\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mS_test_i\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     40\u001b[0m         \u001b[0my_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstacker\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mS_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'ABCMeta' object does not support indexing"
+     ]
+    }
+   ],
+   "source": [
+    "# from sklearn.linear_model import LinearRegression, Ridge\n",
+    "# n_folds=5\n",
+    "# ensembleObj=Ensemble(n_folds=n_folds, stacker=LinearRegression(fit_intercept=False, n_jobs=7), \\\n",
+    "#                      base_models=[LinearRegression, Ridge],\n",
+    "#                      is_TimeSeries=False)#,\\\n",
+    "# ensembleObj.fit(X_train=X_train, y_train=y_train)\n",
+    "# pred=ensembleObj.predict(X_test=X_test)\n",
+    "# r2_score(y_test, pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
    },
    "outputs": [],
    "source": []
