--- a/XGBoostPackge.ipynb
+++ b/XGBoostPackge.ipynb
@@ -2,24 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/sklearn/cross_validation.py:44: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
-      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n",
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/sklearn/grid_search.py:43: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. This module will be removed in 0.20.\n",
-      "  DeprecationWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.grid_search import GridSearchCV\n",
     "import numpy as np\n",
@@ -28,6 +17,7 @@
     "from sklearn.ensemble import RandomForestClassifier, RandomForestRegressor\n",
     "from sklearn.ensemble import GradientBoostingClassifier, GradientBoostingRegressor\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LinearRegression\n",
     "import xgboost as xgb\n",
     "from xgboost import XGBClassifier, XGBRegressor\n",
     "from sklearn.metrics import log_loss, mean_squared_error as mse, r2_score \n",
@@ -116,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -126,7 +116,7 @@
    "source": [
     "class xgbClass(object):\n",
     "    def __init__(self, eta=.1, subsample=.8, num_class=1, max_depth=5, seed=17, silent=0, eva_metric='mlogloss',\\\n",
-    "                colsample_bytree=.8, objective='solfprob'):\n",
+    "                colsample_bytree=1, objective='solfprob'):\n",
     "        self.params={\n",
     "        'objective' : objective, #'reg:linear','multi:softprob'\n",
     "        'subsample' : subsample,\n",
@@ -153,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -188,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -200,7 +190,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.959367862292\n"
+      "0.95912476935\n"
      ]
     }
    ],
@@ -212,9 +202,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
     "editable": true
    },
@@ -500,7 +490,230 @@
       "[274]\teval-rmse:0.201911\n",
       "[275]\teval-rmse:0.201916\n",
       "[276]\teval-rmse:0.201928\n",
-      "[277]\teval-rmse:0.201924\n"
+      "[277]\teval-rmse:0.201924\n",
+      "[278]\teval-rmse:0.201938\n",
+      "[279]\teval-rmse:0.201944\n",
+      "[280]\teval-rmse:0.201947\n",
+      "[281]\teval-rmse:0.201943\n",
+      "[282]\teval-rmse:0.201938\n",
+      "[283]\teval-rmse:0.201931\n",
+      "[284]\teval-rmse:0.20193\n",
+      "[285]\teval-rmse:0.201927\n",
+      "[286]\teval-rmse:0.201929\n",
+      "[287]\teval-rmse:0.201938\n",
+      "[288]\teval-rmse:0.201945\n",
+      "[289]\teval-rmse:0.201943\n",
+      "[290]\teval-rmse:0.201947\n",
+      "[291]\teval-rmse:0.201948\n",
+      "[292]\teval-rmse:0.20195\n",
+      "[293]\teval-rmse:0.201951\n",
+      "[294]\teval-rmse:0.201952\n",
+      "[295]\teval-rmse:0.201954\n",
+      "[296]\teval-rmse:0.201955\n",
+      "[297]\teval-rmse:0.201955\n",
+      "[298]\teval-rmse:0.201957\n",
+      "[299]\teval-rmse:0.201963\n",
+      "[300]\teval-rmse:0.201963\n",
+      "[301]\teval-rmse:0.201969\n",
+      "[302]\teval-rmse:0.201975\n",
+      "[303]\teval-rmse:0.201976\n",
+      "[304]\teval-rmse:0.201982\n",
+      "[305]\teval-rmse:0.201987\n",
+      "[306]\teval-rmse:0.201995\n",
+      "[307]\teval-rmse:0.201996\n",
+      "[308]\teval-rmse:0.201997\n",
+      "[309]\teval-rmse:0.201999\n",
+      "[310]\teval-rmse:0.201998\n",
+      "[311]\teval-rmse:0.20199\n",
+      "[312]\teval-rmse:0.201991\n",
+      "[313]\teval-rmse:0.201989\n",
+      "[314]\teval-rmse:0.201987\n",
+      "[315]\teval-rmse:0.201988\n",
+      "[316]\teval-rmse:0.201995\n",
+      "[317]\teval-rmse:0.202002\n",
+      "[318]\teval-rmse:0.202008\n",
+      "[319]\teval-rmse:0.20201\n",
+      "[320]\teval-rmse:0.202007\n",
+      "[321]\teval-rmse:0.202008\n",
+      "[322]\teval-rmse:0.202019\n",
+      "[323]\teval-rmse:0.202021\n",
+      "[324]\teval-rmse:0.202027\n",
+      "[325]\teval-rmse:0.20203\n",
+      "[326]\teval-rmse:0.202033\n",
+      "[327]\teval-rmse:0.202032\n",
+      "[328]\teval-rmse:0.202032\n",
+      "[329]\teval-rmse:0.202037\n",
+      "[330]\teval-rmse:0.202044\n",
+      "[331]\teval-rmse:0.202043\n",
+      "[332]\teval-rmse:0.202044\n",
+      "[333]\teval-rmse:0.202044\n",
+      "[334]\teval-rmse:0.202045\n",
+      "[335]\teval-rmse:0.202046\n",
+      "[336]\teval-rmse:0.202043\n",
+      "[337]\teval-rmse:0.202047\n",
+      "[338]\teval-rmse:0.202053\n",
+      "[339]\teval-rmse:0.202054\n",
+      "[340]\teval-rmse:0.202056\n",
+      "[341]\teval-rmse:0.202058\n",
+      "[342]\teval-rmse:0.202061\n",
+      "[343]\teval-rmse:0.202067\n",
+      "[344]\teval-rmse:0.202067\n",
+      "[345]\teval-rmse:0.202072\n",
+      "[346]\teval-rmse:0.202082\n",
+      "[347]\teval-rmse:0.202081\n",
+      "[348]\teval-rmse:0.202086\n",
+      "[349]\teval-rmse:0.202094\n",
+      "[350]\teval-rmse:0.202098\n",
+      "[351]\teval-rmse:0.202101\n",
+      "[352]\teval-rmse:0.202108\n",
+      "[353]\teval-rmse:0.202114\n",
+      "[354]\teval-rmse:0.202121\n",
+      "[355]\teval-rmse:0.202126\n",
+      "[356]\teval-rmse:0.202122\n",
+      "[357]\teval-rmse:0.202126\n",
+      "[358]\teval-rmse:0.20213\n",
+      "[359]\teval-rmse:0.202133\n",
+      "[360]\teval-rmse:0.202129\n",
+      "[361]\teval-rmse:0.202128\n",
+      "[362]\teval-rmse:0.202126\n",
+      "[363]\teval-rmse:0.202131\n",
+      "[364]\teval-rmse:0.202134\n",
+      "[365]\teval-rmse:0.202131\n",
+      "[366]\teval-rmse:0.202141\n",
+      "[367]\teval-rmse:0.202144\n",
+      "[368]\teval-rmse:0.202147\n",
+      "[369]\teval-rmse:0.202146\n",
+      "[370]\teval-rmse:0.20215\n",
+      "[371]\teval-rmse:0.20215\n",
+      "[372]\teval-rmse:0.202148\n",
+      "[373]\teval-rmse:0.202152\n",
+      "[374]\teval-rmse:0.202158\n",
+      "[375]\teval-rmse:0.202167\n",
+      "[376]\teval-rmse:0.202169\n",
+      "[377]\teval-rmse:0.202164\n",
+      "[378]\teval-rmse:0.202168\n",
+      "[379]\teval-rmse:0.20217\n",
+      "[380]\teval-rmse:0.202178\n",
+      "[381]\teval-rmse:0.202178\n",
+      "[382]\teval-rmse:0.202183\n",
+      "[383]\teval-rmse:0.202183\n",
+      "[384]\teval-rmse:0.202185\n",
+      "[385]\teval-rmse:0.20219\n",
+      "[386]\teval-rmse:0.202195\n",
+      "[387]\teval-rmse:0.202201\n",
+      "[388]\teval-rmse:0.2022\n",
+      "[389]\teval-rmse:0.202201\n",
+      "[390]\teval-rmse:0.202202\n",
+      "[391]\teval-rmse:0.202211\n",
+      "[392]\teval-rmse:0.202212\n",
+      "[393]\teval-rmse:0.20221\n",
+      "[394]\teval-rmse:0.202215\n",
+      "[395]\teval-rmse:0.202221\n",
+      "[396]\teval-rmse:0.202224\n",
+      "[397]\teval-rmse:0.202235\n",
+      "[398]\teval-rmse:0.202238\n",
+      "[399]\teval-rmse:0.202239\n",
+      "[400]\teval-rmse:0.202239\n",
+      "[401]\teval-rmse:0.202241\n",
+      "[402]\teval-rmse:0.202251\n",
+      "[403]\teval-rmse:0.202254\n",
+      "[404]\teval-rmse:0.202262\n",
+      "[405]\teval-rmse:0.202264\n",
+      "[406]\teval-rmse:0.202268\n",
+      "[407]\teval-rmse:0.20226\n",
+      "[408]\teval-rmse:0.202264\n",
+      "[409]\teval-rmse:0.202262\n",
+      "[410]\teval-rmse:0.202256\n",
+      "[411]\teval-rmse:0.202265\n",
+      "[412]\teval-rmse:0.20227\n",
+      "[413]\teval-rmse:0.202272\n",
+      "[414]\teval-rmse:0.202275\n",
+      "[415]\teval-rmse:0.20228\n",
+      "[416]\teval-rmse:0.202282\n",
+      "[417]\teval-rmse:0.202284\n",
+      "[418]\teval-rmse:0.202293\n",
+      "[419]\teval-rmse:0.202298\n",
+      "[420]\teval-rmse:0.202305\n",
+      "[421]\teval-rmse:0.202297\n",
+      "[422]\teval-rmse:0.202303\n",
+      "[423]\teval-rmse:0.202305\n",
+      "[424]\teval-rmse:0.202303\n",
+      "[425]\teval-rmse:0.202305\n",
+      "[426]\teval-rmse:0.202307\n",
+      "[427]\teval-rmse:0.202309\n",
+      "[428]\teval-rmse:0.202312\n",
+      "[429]\teval-rmse:0.202312\n",
+      "[430]\teval-rmse:0.202316\n",
+      "[431]\teval-rmse:0.202318\n",
+      "[432]\teval-rmse:0.202321\n",
+      "[433]\teval-rmse:0.202324\n",
+      "[434]\teval-rmse:0.202321\n",
+      "[435]\teval-rmse:0.202324\n",
+      "[436]\teval-rmse:0.202327\n",
+      "[437]\teval-rmse:0.202331\n",
+      "[438]\teval-rmse:0.202336\n",
+      "[439]\teval-rmse:0.202345\n",
+      "[440]\teval-rmse:0.202355\n",
+      "[441]\teval-rmse:0.202356\n",
+      "[442]\teval-rmse:0.202359\n",
+      "[443]\teval-rmse:0.202368\n",
+      "[444]\teval-rmse:0.202375\n",
+      "[445]\teval-rmse:0.202379\n",
+      "[446]\teval-rmse:0.202381\n",
+      "[447]\teval-rmse:0.202383\n",
+      "[448]\teval-rmse:0.202387\n",
+      "[449]\teval-rmse:0.202392\n",
+      "[450]\teval-rmse:0.202395\n",
+      "[451]\teval-rmse:0.202392\n",
+      "[452]\teval-rmse:0.202398\n",
+      "[453]\teval-rmse:0.202399\n",
+      "[454]\teval-rmse:0.202403\n",
+      "[455]\teval-rmse:0.202403\n",
+      "[456]\teval-rmse:0.202404\n",
+      "[457]\teval-rmse:0.202406\n",
+      "[458]\teval-rmse:0.202409\n",
+      "[459]\teval-rmse:0.202415\n",
+      "[460]\teval-rmse:0.202422\n",
+      "[461]\teval-rmse:0.202427\n",
+      "[462]\teval-rmse:0.202432\n",
+      "[463]\teval-rmse:0.202429\n",
+      "[464]\teval-rmse:0.202434\n",
+      "[465]\teval-rmse:0.202435\n",
+      "[466]\teval-rmse:0.202443\n",
+      "[467]\teval-rmse:0.202448\n",
+      "[468]\teval-rmse:0.202453\n",
+      "[469]\teval-rmse:0.202453\n",
+      "[470]\teval-rmse:0.202456\n",
+      "[471]\teval-rmse:0.202456\n",
+      "[472]\teval-rmse:0.202462\n",
+      "[473]\teval-rmse:0.202455\n",
+      "[474]\teval-rmse:0.202455\n",
+      "[475]\teval-rmse:0.202465\n",
+      "[476]\teval-rmse:0.202467\n",
+      "[477]\teval-rmse:0.202461\n",
+      "[478]\teval-rmse:0.202464\n",
+      "[479]\teval-rmse:0.20247\n",
+      "[480]\teval-rmse:0.202467\n",
+      "[481]\teval-rmse:0.202466\n",
+      "[482]\teval-rmse:0.202467\n",
+      "[483]\teval-rmse:0.202467\n",
+      "[484]\teval-rmse:0.20246\n",
+      "[485]\teval-rmse:0.202467\n",
+      "[486]\teval-rmse:0.202469\n",
+      "[487]\teval-rmse:0.202471\n",
+      "[488]\teval-rmse:0.202472\n",
+      "[489]\teval-rmse:0.202471\n",
+      "[490]\teval-rmse:0.202472\n",
+      "[491]\teval-rmse:0.202477\n",
+      "[492]\teval-rmse:0.202481\n",
+      "[493]\teval-rmse:0.202485\n",
+      "[494]\teval-rmse:0.202488\n",
+      "[495]\teval-rmse:0.202487\n",
+      "[496]\teval-rmse:0.202489\n",
+      "[497]\teval-rmse:0.202494\n",
+      "[498]\teval-rmse:0.202501\n",
+      "[499]\teval-rmse:0.202507\n",
+      "0.959105226137\n"
      ]
     }
    ],
@@ -511,13 +724,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.959140452508\n"
+     ]
+    }
+   ],
    "source": [
     "model=xgbClass(objective='reg:linear', eva_metric='rmse')\n",
     "model.fit(X_train, y_train)\n",
@@ -529,9 +750,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": []
