--- a/CrossValidation.ipynb
+++ b/CrossValidation.ipynb
@@ -59,7 +59,10 @@
     "        X_CVholdout = X_train[test_idx]\n",
     "        y_CVholdout = y_train[test_idx]\n",
     "        model.fit(X_CVtrain, y_CVtrain)\n",
-    "        pred = model.predict(X_CVholdout)[:]\n",
+    "        if my_score==log_loss:\n",
+    "            pred=model.predict_proba(X_CVholdout)\n",
+    "        else:\n",
+    "            pred = model.predict(X_CVholdout)[:]\n",
     "        cv_scores.append(my_score(y_CVholdout, pred))\n",
     "    return np.mean(cv_scores)"
    ]
