--- a/modelTuning.ipynb
+++ b/modelTuning.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -35,7 +37,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -62,7 +66,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -102,7 +108,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -119,10 +127,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "param_grid = {'n_estimators':[500, 600, 700, 800, 900, 1000], 'max_features':['auto','sqrt'], 'max_depth':[4,5,6,7,8,9]}\n",
+    "for n_est in param_grid['n_estimators']:\n",
+    "    for max_feat in param_grid['max_features']:\n",
+    "        for max_d in param_grid['max_depth']:\n",
+    "            model=RandomForestClassifier(n_estimators=n_est, max_features=max_feat, max_depth=max_d)\n",
+    "            score=CVScore(model=model, my_score=log_loss, X_train=train_X, y_train=train_y)\n",
+    "            print('n_est={}, max_feat={}, max_d={}, score={}'.format(n_est, max_feat, max_d, score))"
+   ]
   }
  ],
  "metadata": {
@@ -141,7 +159,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
