--- a/modelTuning.ipynb
+++ b/modelTuning.ipynb
@@ -141,6 +141,29 @@
     "            score=CVScore(model=model, my_score=log_loss, X_train=train_X, y_train=train_y)\n",
     "            print('n_est={}, max_feat={}, max_d={}, score={}'.format(n_est, max_feat, max_d, score))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "param_grid = {'eta':[.05, .1], 'num_round':[300,400,500], 'subsample':[.8], 'colsample_bytree':[.5,.85], \\\n",
+    "              'max_depth':[7,8,9], 'seed':[2017]}\n",
+    "for eta in param_grid['eta']:\n",
+    "    for subsample in param_grid['subsample']:\n",
+    "        for colsample_bytree in param_grid['colsample_bytree']:\n",
+    "            for max_depth in param_grid['max_depth']:\n",
+    "                for seed in param_grid['seed']:\n",
+    "                    model=xgbClass(colsample_bytree=colsample_bytree, eta=eta, eva_metric='mlogloss', \\\n",
+    "                                       subsample=subsample, max_depth=max_depth, seed=seed,\\\n",
+    "                                       objective='multi:softprob', num_class=3)\n",
+    "                    score=CVScore(model=model, my_score=log_loss, X_train=train_X, y_train=train_y)\n",
+    "                    print('eta={}, subsample={}, colsample_bytree={}, max_depth={}, seed={}, score={}'.\\\n",
+    "                          format(eta, subsample, colsample_bytree, max_depth, seed, score))"
+   ]
   }
  ],
  "metadata": {
