--- a/Stacking.ipynb
+++ b/Stacking.ipynb
@@ -26,7 +26,7 @@
     "#from sklearn.cross_validation import KFold\n",
     "from sklearn.metrics import r2_score\n",
     "from sklearn.model_selection import KFold, train_test_split, TimeSeriesSplit\n",
-    "from XGBoostPackge import xgbClass"
+    "from XGBoostPackage import xgbClass"
    ]
   },
   {
@@ -51,8 +51,9 @@
     "        #self_folds=[]\n",
     "        \n",
     "    def fit(self, X_train, y_train):\n",
-    "        X_train=np.array(X_train)\n",
-    "        y_train=np.array(y_train)\n",
+    "        if not len(np.array(X_train).shape)==0:\n",
+    "            X_train=np.array(X_train)\n",
+    "            y_train=np.array(y_train)\n",
     "        if not self.isTS:\n",
     "            kf=KFold(n_splits=self.n_folds, shuffle=True, random_state=17)\n",
     "        else:\n",
@@ -60,7 +61,8 @@
     "        self.S_train = np.zeros((X_train.shape[0], len(self.base_models)))\n",
     "        for i, clf in enumerate(self.base_models):\n",
     "            #clf=[clfModel for tmp in np.arange(self.n_folds)]\n",
-    "            for j, (train_idx, test_idx) in enumerate(kf.split(np.arange(len(X_train)))):\n",
+    "            for j, (train_idx, test_idx) in enumerate(kf.split(X_train)):\n",
+    "                print('startig training model {}, training set {}'.format(i,j))\n",
     "                X_CVtrain = X_train[train_idx]\n",
     "                y_CVtrain = y_train[train_idx]\n",
     "                X_CVholdout = X_train[test_idx]\n",
@@ -71,11 +73,13 @@
     "        self.stacker.fit(self.S_train, y_train)\n",
     "        \n",
     "    def predict(self, X_test):    \n",
-    "        X_test=np.array(X_test)\n",
+    "        if not len(np.array(X_test).shape)==0:\n",
+    "            X_test=np.array(X_test)\n",
     "        self.S_test = np.zeros((X_test.shape[0], len(self.base_models)))\n",
     "        for i, clf in enumerate(self.base_models):\n",
     "            S_test_i = np.zeros((X_test.shape[0], self.n_folds))\n",
     "            for j in range(self.n_folds):\n",
+    "                print('startig predicting model {}, training set {}'.format(i,j))\n",
     "                S_test_i[:, j] = clf[j].predict(X_test)[:]\n",
     "            self.S_test[:, i] = S_test_i.mean(1)\n",
     "        y_pred = self.stacker.predict(self.S_test)[:]\n",
@@ -84,9 +88,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class EnsembleClassifier(object):\n",
+    "    #base_models=[model1, model2, model3,...]\n",
+    "    def __init__(self, n_folds, stacker, base_models, is_TimeSeries=False, n_class=1):\n",
+    "        self.n_folds = n_folds\n",
+    "        self.stacker = stacker\n",
+    "        self.base_models = base_models\n",
+    "        self.S_train=[]\n",
+    "        self.S_test=[]\n",
+    "        self.isTS=is_TimeSeries\n",
+    "        self.n_class=n_class\n",
+    "        #self_folds=[]\n",
+    "        \n",
+    "    def fit(self, X_train, y_train):\n",
+    "        if not len(np.array(X_train).shape)==0:\n",
+    "            X_train=np.array(X_train)\n",
+    "            y_train=np.array(y_train)\n",
+    "        if not self.isTS:\n",
+    "            kf=KFold(n_splits=self.n_folds, shuffle=True, random_state=17)\n",
+    "        else:\n",
+    "            kf=TimeSeriesSplit(n_splits=self.n_folds)\n",
+    "        self.S_train = np.zeros((X_train.shape[0], len(self.base_models)*self.n_class))\n",
+    "        for i, clf in enumerate(self.base_models):\n",
+    "            #clf=[clfModel for tmp in np.arange(self.n_folds)]\n",
+    "            for j, (train_idx, test_idx) in enumerate(kf.split(X_train)):\n",
+    "                print('startig training model {}, training set {}'.format(i,j))\n",
+    "                X_CVtrain = X_train[train_idx]\n",
+    "                y_CVtrain = y_train[train_idx]\n",
+    "                X_CVholdout = X_train[test_idx]\n",
+    "                # y_CVholdout = y_train[test_idx]\n",
+    "                clf[j].fit(X_CVtrain, y_CVtrain)\n",
+    "                y_pred = clf[j].predict_proba(X_CVholdout)[:]\n",
+    "                self.S_train[test_idx, i:(i+self.n_class)] = y_pred\n",
+    "        self.stacker.fit(self.S_train, y_train)\n",
+    "        \n",
+    "    def predict(self, X_test):    \n",
+    "        if not len(np.array(X_test).shape)==0:\n",
+    "            X_test=np.array(X_test)\n",
+    "        self.S_test = np.zeros((X_test.shape[0], len(self.base_models)*self.n_class))\n",
+    "        for i, clf in enumerate(self.base_models):\n",
+    "            S_test_i = np.zeros((X_test.shape[0], self.n_folds))\n",
+    "            for j in range(self.n_folds):\n",
+    "                print('startig predicting model {}, training set {}'.format(i,j))\n",
+    "                S_test_i[:, j] = clf[j].predict_proba(X_test)[:]\n",
+    "            self.S_test[:, i] = S_test_i.mean(1)\n",
+    "        y_pred = self.stacker.predict(self.S_test)[:]\n",
+    "        return y_pred\n",
+    "    \n",
+    "    def predict_proba(self, X_test):    \n",
+    "        if not len(np.array(X_test).shape)==0:\n",
+    "            X_test=np.array(X_test)\n",
+    "        self.S_test = np.zeros((X_test.shape[0], len(self.base_models)*self.n_class))\n",
+    "        for i, clf in enumerate(self.base_models):\n",
+    "            S_test_i = np.zeros((X_test.shape[0], self.n_folds))\n",
+    "            for j in range(self.n_folds):\n",
+    "                print('startig predict_proba model {}, training set {}'.format(i,j))\n",
+    "                S_test_i[:, j] = clf[j].predict_proba(X_test)[:]\n",
+    "            self.S_test[:, i] = S_test_i.mean(1)\n",
+    "        y_pred = self.stacker.predict_proba(self.S_test)[:]\n",
+    "        return y_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -264,7 +339,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
