--- a/modelTuning.ipynb
+++ b/modelTuning.ipynb
@@ -97,7 +97,7 @@
    ],
    "source": [
     "estimator=RandomForestRegressor()\n",
-    "param_grid = {'n_estimators':[100], 'max_features':['auto','square'], 'max_depth':[4]}\n",
+    "param_grid = {'n_estimators':[100], 'max_features':['auto','sqrt'], 'max_depth':[4]}\n",
     "my_scorer=make_scorer(mse, greater_is_better=False)\n",
     "model = GridSearchCV(\n",
     "    estimator=estimator, param_grid=param_grid, n_jobs=-1, cv=5, verbose=20, scoring=my_scorer)\n",
