--- a/CrossValidation.ipynb
+++ b/CrossValidation.ipynb
@@ -20,7 +20,7 @@
     "from sklearn import linear_model\n",
     "import xgboost as xgb\n",
     "from xgboost import XGBClassifier, XGBRegressor\n",
-    "from sklearn.metrics import log_loss, mean_squared_error as mse, r2_score \n",
+    "from sklearn.metrics import log_loss, mean_squared_error as mse, r2_score, make_scorer \n",
     "from sklearn.metrics.scorer import make_scorer"
    ]
   },
@@ -107,7 +107,37 @@
     "editable": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def RMSLE_(y_val, y_val_pred):\n",
+    "    return np.sqrt(np.mean((np.log(y_val+1)-np.log(y_val_pred+1))**2))\n",
+    "RMSLE = make_scorer(RMSLE_, greater_is_better=False) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "xgbreg = xgb.XGBRegressor()\n",
+    "param_grid = {\n",
+    "       #'n_estimators': [500],\n",
+    "       'learning_rate': [ 0.05],\n",
+    "       'max_depth': [5],\n",
+    "       'subsample': [ 0.7],\n",
+    "       'colsample_bytree': [0.7],\n",
+    "        'seed':[123,2017,2]\n",
+    "}\n",
+    "model = GridSearchCV(estimator=xgbreg, param_grid=param_grid, n_jobs=-1, cv=3, scoring=RMSLE)\n",
+    "model.fit(X_train, y_train)\n",
+    "print('eXtreme Gradient Boosting regression...')\n",
+    "print('Best Params:')\n",
+    "print(model.best_params_)\n",
+    "print('Best CV Score:')\n",
+    "print(-model.best_score_)"
+   ]
   }
  ],
  "metadata": {
