slides updated Sep 23

--- a/Two_sigma_prediction/lecture slides/Kaggle Two Sigma Financial Modeling Analysis.ipynb
+++ b/Two_sigma_prediction/lecture slides/Kaggle Two Sigma Financial Modeling Analysis.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "_cell_guid": "0a3c8acf-8ea5-10a5-b3dc-d210be84e396",
     "collapsed": false,
@@ -26,10 +26,6 @@
    },
    "outputs": [],
    "source": [
-    "# This Python 3 environment comes with many helpful analytics libraries installed\n",
-    "# It is defined by the kaggle/python docker image: https://github.com/kaggle/docker-python\n",
-    "# For example, here's several helpful packages to load in \n",
-    "\n",
     "import numpy as np # linear algebra\n",
     "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
     "import matplotlib.pyplot as plt\n",
@@ -54,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "_cell_guid": "af036d68-c80c-67a3-3b2a-1817af9ebfe7",
     "collapsed": true,
@@ -66,6 +62,40 @@
     "with pd.HDFStore(\"../input/train.h5\", \"r\") as train:\n",
     "    # Note that the \"train\" dataframe is the only dataframe in the file\n",
     "    df = train.get(\"train\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1710756, 111)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "It is a huge data set with 1.7 million rows."
    ]
   },
   {
