--- a/Two_sigma_prediction/lecture slides/No18_Solution.ipynb
+++ b/Two_sigma_prediction/lecture slides/No18_Solution.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "It is solution [public ranking #16, private ranking #18][1] by [Willie Liao][2].\n",
     "\n",
@@ -11,10 +14,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "There are several things we can learn from it:\n",
+    "\n",
+    "1. data preprocessing: fillna, clip\n",
+    "2. feature contruction: moving average, lag, \n",
+    "3. choice of model and ensemble: extraTreeRegressor, Ridge, weighted sum"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -33,7 +52,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -47,7 +68,9 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -59,7 +82,9 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -77,7 +102,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -91,23 +118,23 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
     "env = kagglegym.make()\n",
-    "o = env.reset()\n",
-    "cols_excl = ([env.ID_COL_NAME, env.SAMPLE_COL_NAME, env.TARGET_COL_NAME, env.TIME_COL_NAME]\n",
-    "             + [c + '_B' for c in cols_backshift] + ['ti', 'y_lag_prod', 'sign_change_sum'])\n",
-    "cols_orig = [c for c in o.train.columns if c not in cols_excl] + ['ma']\n",
-    "cols_na_count = [c + '_nan' for c in cols_orig if c not in cols_excl]"
+    "o = env.reset()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -124,6 +151,7 @@
     "        return self\n",
     "\n",
     "    def transform(self, X):\n",
+    "        # see physical_meaning_tech_20_30.ipynb for definition of moving average\n",
     "        X['ma'] = X['technical_20'] + X['technical_13'] - X['technical_30']\n",
     "        X = X.assign(nas=0, nas1=0)\n",
     "        for c in self.cols_orig:\n",
@@ -143,7 +171,9 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -179,6 +209,9 @@
     "        X.loc[X.y_lag_prod.isnull(), 'y_lag_prod'] = X.y_lag.loc[X.y_lag_prod.isnull()] + 1.0\n",
     "        X.sign_change_sum.fillna(0, inplace=True)\n",
     "\n",
+    "        #############################\n",
+    "        ### feature construction\n",
+    "        #############################\n",
     "        # Moving Averages\n",
     "        X['ti'] += 1\n",
     "        X.rename(columns={'y_lag_prod': 'y_lag_prod_B', 'y_lag': 'y_lag_B'}, inplace=True)\n",
@@ -234,7 +267,9 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -265,7 +300,9 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -293,7 +330,9 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -318,6 +357,15 @@
     "print('train before preprocess:', train.shape)\n",
     "print('timestamps:', train[\"timestamp\"].nunique())\n",
     "\n",
+    "# c_B: lag(1) term of column c\n",
+    "# ti: # appearance of the corresponding id\n",
+    "# y_lag_prod: cummulative production return upto y_lag\n",
+    "# sign_change_sum: # sign changes\n",
+    "cols_excl = ([env.ID_COL_NAME, env.SAMPLE_COL_NAME, env.TARGET_COL_NAME, env.TIME_COL_NAME]\n",
+    "             + [c + '_B' for c in cols_backshift] + ['ti', 'y_lag_prod', 'sign_change_sum'])\n",
+    "cols_orig = [c for c in o.train.columns if c not in cols_excl] + ['ma']\n",
+    "cols_na_count = [c + '_nan' for c in cols_orig if c not in cols_excl]\n",
+    "\n",
     "train['ma'] = train['technical_20'] + train['technical_13'] - train['technical_30']\n",
     "cols_medians = train[cols_orig].median(axis=0).to_dict()\n",
     "\n",
@@ -340,7 +388,38 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "###################################\n",
+    "### Models\n",
+    "###################################\n",
+    "\n",
+    "\n",
+    "###################################\n",
+    "### Use all the features for tree model\n",
+    "### And selected features for LR\n",
+    "###################################\n",
+    "\n",
+    "cols_et = [c for c in train.columns if c not in cols_excl]\n",
+    "cols_lr0 = ['y_lag', 'ma', 'technical_11', 'fundamental_11', 'technical_11_B', 'fundamental_11_B']\n",
+    "cols_lr1 = ['y_lag', 'technical_22', 'technical_34', 'technical_22_B', 'technical_34_B']\n",
+    "cols_lr2 = ['ma', 'y_lag_prod', 'y_lag_diff']\n",
+    "\n",
+    "post_ts10 = (train.timestamp > 10)\n",
+    "y_is_within_cut = (post_ts10) & (Y_CLIP_LO < train.y) & (train.y < Y_CLIP_HI)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -354,22 +433,15 @@
     }
    ],
    "source": [
-    "###################################\n",
-    "### Models\n",
-    "###################################\n",
-    "cols_et = [c for c in train.columns if c not in cols_excl]\n",
-    "cols_lr0 = ['y_lag', 'ma', 'technical_11', 'fundamental_11', 'technical_11_B', 'fundamental_11_B']\n",
-    "cols_lr1 = ['y_lag', 'technical_22', 'technical_34', 'technical_22_B', 'technical_34_B']\n",
-    "cols_lr2 = ['ma', 'y_lag_prod', 'y_lag_diff']\n",
-    "\n",
-    "post_ts10 = (train.timestamp > 10)\n",
-    "y_is_within_cut = (post_ts10) & (Y_CLIP_LO < train.y) & (train.y < Y_CLIP_HI)\n",
-    "\n",
     "print('MODEL: Extra Trees')\n",
     "print('Features:', len(cols_et))\n",
     "rfr = ExtraTreesRegressor(n_estimators=75, max_depth=5, min_samples_split=30, min_samples_leaf=16, n_jobs=N_THREADS, random_state=20170214)\n",
     "model_et = rfr.fit(train.loc[post_ts10, cols_et], train.loc[post_ts10, 'y'])\n",
     "\n",
+    "###################################\n",
+    "### Linear Models are susceptible\n",
+    "### to outliers. try truncated one.\n",
+    "###################################\n",
     "print('Linear Regression')\n",
     "model_lr0 = Ridge(fit_intercept=False)\n",
     "model_lr0.fit(train.loc[y_is_within_cut, cols_lr0], train.loc[y_is_within_cut, 'y'])\n",
@@ -387,9 +459,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -415,7 +489,7 @@
        "137"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,9 +511,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -453,9 +529,7 @@
       "1400 -0.13 64 1.04\n",
       "1500 -0.17 52 1.01\n",
       "1600 -0.20 52 0.93\n",
-      "1700 -0.30 53 0.91\n",
-      "1800 -0.02 52 0.94\n",
-      "('el fin ...', 0.03302287342157554)\n"
+      "1700 -0.30 53 0.91\n"
      ]
     }
    ],
@@ -518,7 +592,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
