--- a/Two_sigma_prediction/lecture slides/No18_Solution.ipynb
+++ b/Two_sigma_prediction/lecture slides/No18_Solution.ipynb
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -529,7 +529,9 @@
       "1400 -0.13 64 1.04\n",
       "1500 -0.17 52 1.01\n",
       "1600 -0.20 52 0.93\n",
-      "1700 -0.30 53 0.91\n"
+      "1700 -0.30 53 0.91\n",
+      "1800 -0.02 52 0.94\n",
+      "('el fin ...', 0.03302287342157554)\n"
      ]
     }
    ],
@@ -589,12 +591,25 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true,
     "deletable": true,
     "editable": true
+   },
+   "source": [
+    "The training out-of-sample R square is 3.3%. This might seem small. But the top private leaderbroad R square is just [3.8%][1].\n",
+    "\n",
+    "Prediction for return of financial instruments generally expresses fairly low power.\n",
+    "\n",
+    "[1]: https://www.kaggle.com/c/two-sigma-financial-modeling/leaderboard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
    },
    "outputs": [],
    "source": []
